                  implemented test case TX/B.4/2.*
                  implemented test case TX/B.4/3.*
                  implemented test case TX/B.4/4.*
                  implemented test case TX/B.4/5.* and fixed bug # 3010322
                  implemented test case TX/B.4/6.*
                  implemented test case TX/B.4/7.* and fixed bug # 3010638

20100531 - 0.5.10 implemented test case TX/B.2/0.0
                  implemented test case TX/B.2/0.1
                  implemented test case TX/B.2/0.2
                  implemented test case TX/B.2/0.3
                  implemented test case TX/B.2/0.4
                  implemented test case TX/B.2/1.0
                  implemented test case TX/B.2/1.1
                  optimized one phase commit behavior with dynamically 
                  registered resource managers
                  fixed bug # 3009182

20100530 - 0.5.9  implemented test case TX/7.52/0.0
                  implemented test case TX/7.52/0.1
                  implemented test case TX/7.52/1.0
                  implemented test case TX/7.52/1.1
                  implemented test case TX/7.52/2.0
                  implemented test case TX/7.52/2.1
                  implemented test case TX/7.52/3.0
                  implemented test case TX/7.52/3.1
                  implemented test case TX/7.52/3.2
                  implemented test case TX/7.52/3.3 and fixed bug # 3008872
                  implemented test case TX/7.52/3.4
                  implemented test case TX/7.52/3.6
                  implemented test case TX/7.52/3.7
                  implemented test case TX/7.52/4.0
                  implemented test case TX/7.52/4.1
                  implemented test case TX/7.52/4.2
                  implemented test case TX/7.52/4.3
                  implemented test case TX/7.52/5.0
                  implemented test case TX/7.52/5.1
                  implemented test case TX/7.52/5.2
                  implemented test case TX/7.52/5.3