@@ -1,5 +1,3 @@
-A useless recovery has been discovered with test cases... improve it!
-
 Stability test with valgrind must be performed
 
 Stress test must be performed
